# WaveStack

./: .env.example  .gitignore  BOTS-SUMMARY.md  DEMO.md  QUICKSTART.md  README.md  docker-compose.yml  new_settings.json  package.json  pnpm-lock.yaml  write_files.mjs
.claude/: settings.local.json
apps/core-app/: .env.example  Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/desktop/: .gitignore  README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: layout_no_topbar.tsx  package.json  write_script.mjs
docs/: AI-PERSONALITY-GUIDE.md  API-REFERENCE.md  ARCHITECTURE.md  BOT-INTEGRATION.md  CODEBASE.md  FRONTEND-PLAN.md  LOCAL-SETUP.md  PROD-DEPLOY.md  Plans.md  QUICKSTART-AI.md  README.md  STRUCTURE.md
infra/: Caddyfile  compose.yaml  nginx.conf  nginx.conf.template
services/: BOT-SETUP.md
services/agent-orchestrator/: .env.example  Dockerfile  README.md  requirements.txt
services/ai-personality/: .env.example  Dockerfile  package.json  requirements.txt
services/ai-personality-py/: .env.example  Dockerfile  requirements.txt  schema.prisma
services/analytics-dashboard/: .env.example  Dockerfile  requirements.txt
services/analytics-dashboard-go/: Dockerfile  go.mod  go.sum  handlers.go  main.go
services/auto-mod/: .env.example  Dockerfile  requirements.txt
services/clipper/: .env.example  Dockerfile  requirements-dev.txt  requirements.txt
services/discord-bot/: .env.example  Dockerfile  package.json
services/email-marketing/: Dockerfile  requirements.txt
services/knowledge/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/knowledge/prisma/: schema.prisma
services/knowledge/src/: config.py  main.py
services/knowledge/src/api/: routes.py
services/knowledge/src/rag/: chunking.py  context.py  embeddings.py  ingestion.py  retrieval.py
services/knowledge/src/storage/: chroma.py  documents.py
services/livestream-analytics/: Dockerfile  requirements.txt
services/mcp-gateway/: .env.example  README.md  package.json  tsconfig.json
services/merch-integration/: Dockerfile  requirements.txt
services/merch-integration-ts/: Dockerfile  package.json
services/ml-training/: .env.example  Dockerfile  README.md  requirements.txt
services/ollama-gw/: .env.example
services/seo-optimizer/: Dockerfile  requirements.txt
services/skills/: .env.example  Dockerfile  README.md  package.json
services/social-ingest/: .env.example  Dockerfile  package.json
services/social-publisher/: .env.example  Dockerfile  README.md  requirements.txt
(+343 files in other folders)
