[project]
name = "knowledge-service"
version = "0.1.0"
description = "Knowledge Service RAG pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "prisma>=0.14.0",
    "redis>=5.0.6",
    "chromadb>=0.5.3",
    "langchain-text-splitters>=0.2.1",
    "openai>=1.35.3",
    "sentence-transformers>=3.0.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.9",
    "mypy>=1.10.0",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults (fastapi depends on this)
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "langchain_text_splitters.*",
    "redis.*",
    "sentence_transformers.*"
]
ignore_missing_imports = true
