[package]
name = "wavestack"
version = "0.1.0"
description = "WaveStack Desktop"
authors = ["WaveStack Team"]
license = "MIT"
repository = "https://github.com/wavestack/wavestack"
default-run = "wavestack"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "wavestack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wavestack"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell        = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart    = "2"
tauri-plugin-single-instance = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# ── Release profile: tiny binary, low runtime overhead ────────────────────
[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"   # optimise for size — less memory mapped at runtime
panic         = "abort"
strip         = true  # strip debug symbols → smaller binary, less disk I/O
